2013-07-03 Ivan Vucica <ivan@vucica.net>

	* Source/CFNumber.c: Improved the way INFINITY and NAN are defined,
	preferring to only get them from <math.h>, and using hacks in case
	<math.h> does not define them for some reason.
	* Headers/CoreFoundation/CFBase.h: Replaced manual definitions of
	MAC_OS_X_VERSION macros with inclusion of GSVersionMacros.h. This
	fixes the issue where the macros were sometimes defined multiple,
	and fixes the issue where the macros were (by now) no longer
	matching values in GNUstep Base.

2013-06-13 Stefan Bidigaray <stefanbidi@gmail.com>

	* configure.ac: Check for existance of ICU headers.
	* Source/CFString.c: Only build ICU support if headers are installed.
	* Source/CFStringEncoding.c: Incorporate nonlossy ASCII conversion
	function.  Check ICU headers.
	* Source/CFRuntime.c: Only check for small objects if they are
	supported.
	* Source/NSCFTimeZone.m,
	* Tests/CFLocale/bridge.m,
	* Tests/CFDictionary/bridge.m,
	* Tests/CFArray/bridge.m: Include Foundation/NSString.h.

2013-06-08 Lubos Dolezel <lubos@dolezel.info>

	* Source/CFRuntime.c: fix a TFB crash with small objects
	* Source/GNUmakefile.in,
	* Tests/GNUmakefile.super: remove a macro that causes all OS X Base
	methods to be unavailable
	* Source/CFTimeZone.c,
	* Source/NSCFTimeZone.m,
	* Tests/CFTimeZone/bridge.m: TFB support for CFTimeZone

2013-06-06 Lubos Dolezel <lubos@dolezel.info>

	* Tests/CFArray/bridge.m,
	* Source/NSCFArray.m,
	* Source/CFArray.c: TFB for CFArray and other fixes

2013-06-06 Lubos Dolezel <lubos@dolezel.info>

	* Tests/CFDictionary/bridge.m,
	* Source/CFDictionary.c,
	* Source/NSCFDictionary.m: TFB for CFDictionary
	* Source/NSCFData.m: fixing the _cfGetTypeID call
	* Source/NSCFError.m: fixing the _cfGetTypeID call


2013-06-06 Lubos Dolezel <lubos@dolezel.info>

	* Source/NSCFType.m: leave hash calculation to NS classes,
	so that they match when compaing NS and CF objects
	* Tests/CFLocale/bridge.m
	* Source/NSCFLocale.m,